Fix not showing footer on portfolio on windows

--- a/css/less/theme.less
+++ b/css/less/theme.less
@@ -18,7 +18,6 @@ html {
   z-index:49;
   min-width:100%;
   background-color:@secondary;
-  padding-bottom:100px;
 }
 body {
   height:100%;
@@ -50,6 +49,7 @@ body {
     margin-left:0px;
     left:0;
   }
+  margin-bottom:180px;
   z-index:-1;
   &:after {
     content: '';
